--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
-hello world
-im macko
-and im gay
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Macko Gay</title>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    </style>
+  </head>
+  <body>
+    <img src="mackogayobviously.jpg" alt="This is Macko">
+  </body>
+</html>
