--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Macko Gay</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <style>
       html, body {
         height: 100%;
